--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
 dependencies {
 
     // Navigation
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation('androidx.navigation:navigation-compose:2.5.3')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -60,10 +60,18 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
 
     testImplementation 'junit:junit:4.13.2'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    //authentication
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    //firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    // coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 }
